hildon-desktop (1:2.2.151~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixed: BMO #12266: ctrl_backspace_in_tasknav == 5 with a notification thumb in the task navigator results in crash.
  * Fixed: Relaunching landscape-only application from the portrait launcher leads to visual glitches.

 -- Tomasz Pieniążek <t.pieniazek@gazeta.pl>  Sun, 25 Jan 2013 17:07:00 +0200

hildon-desktop (1:2.2.150-1) unstable; urgency=low

  * Fixed: thumb is partially transparent/clipped when the task navigator changes orientation.
  * Fixed: instead of a dialog window only blurred background is visible.
  * Fixed: do not delay screen rotation when the launcher page is being scrolled.
  * Fixed: the launcher's 'empty label' is partially off-screen in portrait mode.
  * Fixed: it's possible to change screen orientation in desktop edit mode.
  * Fixed: status area is visible when rotating from desktop edit mode to portrait desktop.
  * hd_launcher_window_created() should be enough to hide the loading screen.
  * Formatting fixes.

 -- Tomasz Pieniążek <t.pieniazek@gazeta.pl>  Sun, 18 Jan 2013 16:40:00 +0200

hildon-desktop (1:2.2.149-1) unstable; urgency=low

  * New HdOrientationLock class. Provides possibility to lock a window in portrait mode.
  * Formatting fixes.
  * Fixed layout of the titlebar in certain scenarios.

 -- Tomasz Pieniążek <t.pieniazek@gazeta.pl>  Sun, 14 Jan 2013 20:34:00 +0200

hildon-desktop (1:2.2.148-1) unstable; urgency=low

  * Another try to improve hd_comp_mgr_may_be_portrait.
  * Loading screen fixes.
  * Update the pip flags when entering the launcher.

 -- Tomasz Pieniążek <t.pieniazek@gazeta.pl>  Sat, 02 Jan 2013 22:24:00 +0200

hildon-desktop (1:2.2.147-1) unstable; urgency=low

  * Improvements related to the new Qt's rotation mechanism.
  * Update window's thumb (task nav) on client portrait property changed.
  * Task navigator fixes (crashes, black background, etc.).